solved shifted button

--- a/client/src/components/Button.css
+++ b/client/src/components/Button.css
@@ -10,5 +10,6 @@
     border: 1px solid #383731;
     color: #ffffff;
     font-family: 'Poppins-SemiBold';
+    cursor: pointer;
   }
   
